# jpeg_compression

./: .gitignore  CMakeLists.txt  README.md  utils.cpp
include/: compressor.hpp  utils.hpp
src/: block_utils.cpp  color_converter.cpp  compressor.cpp  dct.cpp  main.cpp  quantizer.cpp  rle.cpp  utils.cpp  zigzag.cpp
